--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
     ],
     "routes": [
       {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/media/(.*)",
+        "dest": "/media/$1"
+      },
+      {
         "src": "/(.*)",
         "dest": "disease_predictor/wsgi.py"
       }
